<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >


    <TextView
        android:id="@+id/mTvanswer"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:hint="@string/answer_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/mEdtSnum"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/second_no_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/mEdtFnum"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/first_no_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <Button
        android:id="@+id/mBtnadd"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/add_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        android:backgroundTint="@color/gold"/>

    <Button
        android:id="@+id/mBtnsubtract"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/subtract_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443"
        android:backgroundTint="@color/gold"/>

    <Button
        android:id="@+id/mBtndivide"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/divide_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663"
        android:backgroundTint="@color/gold"/>

    <Button
        android:id="@+id/mBtnmultiply"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/multiply_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        android:backgroundTint="@color/gold"/>

</androidx.constraintlayout.widget.ConstraintLayout>